# PolyHost

./: CMakeLists.txt  README.md  build.bat
Source/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiEngine.cpp  MidiEngine.h  MidiMonitorWindow.h  PluginTabComponent.cpp  PluginTabComponent.h  PointerControl.cpp  PointerControl.h  PresetNamePromptHelper.h  PresetSessionController.h  SessionData.h  SessionManager.cpp  SessionManager.h  StandaloneTempoSupport.cpp  StandaloneTempoSupport.h  UnsavedChangesHelper.h
src/: App.xaml  App.xaml.cs  AppInfo.cs  SpsParser.cs  StatusToColorConverter.cs  SuiteInfo.cs.cs  SuiteSelectionWindow.xaml  SuiteSelectionWindow.xaml.cs  ThemeSettings.cs
